feat: enhance error handling in billing domain models with validation checks